--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.14</version>
         </dependency>
+        <dependency>
+		   <groupId>eclipse</groupId>
+		   <artifactId>eclipse-runtime</artifactId>
+		   <version>2.1.0</version>
+		</dependency>
     </dependencies>
 
     <repositories>
