--- a/s3connectorstudiodemo/.classpath
+++ b/s3connectorstudiodemo/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="src" path="src/test/resources"/>
+	<classpathentry kind="con" path="MULE_LIB/Amazon S3"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
