--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.14</version>
         </dependency>
+        <dependency>
+			<groupId>org.mule.modules</groupId>
+    		<artifactId>mule-connector-test</artifactId>
+    		<version>${project.parent.version}</version>
+		</dependency>
     </dependencies>
 
     <repositories>
