--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.mule.modules</groupId>
     <artifactId>mule-module-s3</artifactId>
-    <version>2.6.2-SNAPSHOT</version>
+    <version>2.6.2-cascade</version>
     <packaging>mule-module</packaging>
     <name>Mule S3 Connector</name>
 
     <parent>
         <groupId>org.mule.tools.devkit</groupId>
         <artifactId>mule-devkit-parent</artifactId>
-        <version>3.5.0-SNAPSHOT</version>
+        <version>3.5.0-cascade</version>
     </parent>
 
     <properties>
