--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<category>Community</category>
 		<licensePath>LICENSE.md</licensePath>
 		<devkit.studio.package.skip>false</devkit.studio.package.skip>
+		<connector.test.version>2.0.6</connector.test.version>
 	</properties>
 
 	<dependencies>
@@ -47,12 +48,6 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.14</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mule.modules</groupId>
-			<artifactId>mule-connector-test</artifactId>
-			<version>2.0.6</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
