--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.mule.modules</groupId>
     <artifactId>mule-module-s3</artifactId>
-    <version>2.6.4-SNAPSHOT</version>
+    <version>2.8.0</version>
     <packaging>mule-module</packaging>
     <name>Mule S3 Connector</name>
 
