Update the Devkit & Demo for 3.5.1 Release

--- a/demo/s3connectorstudiodemo/src/main/app/mule-app.properties
+++ b/demo/s3connectorstudiodemo/src/main/app/mule-app.properties
@@ -1,2 +1,4 @@
-#** GENERATED CONTENT ** Mule Custom Properties file.
-#Mon Jul 23 17:51:59 GMT-03:00 2012
+# Enter your credentials and bucket name here.
+s3.accessKey=
+s3.secretKey=
+s3.newBucketName=
